// test1 proto

package snoopy;

message DogInfo {
  required string name= 2;
  required int32 age =1;
  optional double height=3 ;
  optional bool like = 4[default = true ];
  repeated int64 luckynumber = 5;
}

message DogFriendInfo {
  required string name = 1;
  optional int32 years = 2 [ default= 3] ;  	
}

message DogFamily {
	repeated DogInfo dogs = 1;
}

